--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,3 +34,27 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ghcr.io/smu-rainflow/testpubpackages:latest
+
+  deploy:
+    needs: build-and-publish
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Deploy to server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USERNAME }}
+          key: ${{ secrets.DEPLOY_SSH_KEY }}
+          script: |
+            echo "Pulling latest image from GHCR"
+            docker pull ghcr.io/smu-rainflow/testpubpackages:latest
+            
+            echo "Stopping existing container if it exists"
+            docker stop testpubpackages-container || true
+            docker rm testpubpackages-container || true
+            
+            echo "Starting new container"
+            docker run -d --name testpubpackages-container \
+              --restart unless-stopped \
+              ghcr.io/smu-rainflow/testpubpackages:latest
